@@ -85,11 +85,15 @@ clean:
 ifneq (,$(filter $(shell uname),Linux Darwin))
 
 install: lz4 lz4c
+	@echo Installing binaries
 	@install -d -m 755 $(DESTDIR)$(BINDIR)/ $(DESTDIR)$(MANDIR)/
 	@install -m 755 lz4   $(DESTDIR)$(BINDIR)/lz4
 	@ln -sf lz4 $(DESTDIR)$(BINDIR)/lz4cat
 	@install -m 755 lz4c  $(DESTDIR)$(BINDIR)/lz4c
+	@echo Installing man pages
 	@install -m 644 lz4.1 $(DESTDIR)$(MANDIR)/lz4.1
+	@install -m 644 lz4c.1 $(DESTDIR)$(MANDIR)/lz4c.1
+	@install -m 644 lz4cat.1 $(DESTDIR)$(MANDIR)/lz4cat.1
 	@echo lz4 installation completed
 
 uninstall:
